# pypyrus-simple-example

./: .gitignore  Makefile  README.adoc  README.md  pyproject.toml  pypyrus.yaml
src/: cli_parser.py  generator.py  jinja2_filters.py  main.py  schemas.py  yaml_parser.py
tests/: yaml_parser_test.py
tests/yaml_test_files/: pypyrus.invalid.yaml  pypyrus.test.yaml  pypyrus.wrong_schema.yaml
{{ application_name|slug }}/: application.yaml
{{ application_name|slug }}/nginx/: nginx-deployment.yaml
